Fixed #939, adjusted pagi gap, margin

--- a/src/pagination.css
+++ b/src/pagination.css
@@ -18,6 +18,7 @@
     border-radius: 100rem;
     color: var(--ts-gray-800);
     border: 1px solid var(--ts-gray-200);
+    gap: 0.15rem;
 }
 
 /* ==========================================================================
@@ -26,9 +27,8 @@
 
 .ts-pagination .item {
     border-radius: 100rem;
-    padding: 0.5rem 0.8rem;
+    padding: 0.5rem 0.7rem;
     line-height: 1;
-    margin: 0 0.15rem;
     color: var(--ts-gray-800);
     cursor: pointer;
     text-decoration: none;
@@ -60,7 +60,6 @@
     padding: 0.5rem 0rem;
     color: var(--ts-gray-600);
     pointer-events: none;
-
 }
 
 .ts-pagination .item.is-skipped::after {
@@ -144,6 +143,30 @@
     padding: 0;
     background: transparent;
     border-color: transparent;
+}
+
+/**
+ * Outlined
+ */
+
+.ts-pagination.is-outlined {
+    padding: 0;
+    background: transparent;
+    border-color: transparent;
+    gap: 0.3rem;
+}
+
+.ts-pagination.is-outlined .item {
+    border: 1px solid var(--ts-gray-300);
+}
+.ts-pagination.is-outlined .item:is(.is-back, .is-next, .is-first, .is-last, .is-skipped) {
+    border: 0;
+}
+.ts-pagination.is-outlined .item.is-active {
+    background: inherit;
+    color: inherit;
+    font-weight: 500;
+    border-color: var(--ts-gray-800);
 }
 
 /**
